cleanup automatic despatch list

--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -184,10 +184,10 @@ Das Löschen einer Vorlage, die mit einem Ereignis im Schritt *Automatischer Ver
 |====
 |Einstellung |Erläuterung
 
-| *Neue Bestellung über den Webshop*
-|Sendet Kund:innen eine E-Mail mit der Auftragsbestätigung, nachdem der Kaufvorgang im Webshop abgeschlossen wurde. +
-*_Hinweis:_* Wenn du möchtest, dass dein:e Kund:in über diese E-Mail in die Auftragsabwicklung in deinem Webshop gelangen kann, um den Status der Bestellung einzusehen, musst du die Variable `URL zum Checkout` in die Vorlage, die du für dieses automatische Ereignis wählst, einfügen. +
-*_Hinweis:_* Du findest die Variable in der Kategorie <<#variablen-global, Global>>.
+//| *Neue Bestellung über den Webshop*
+//|Sendet Kund:innen eine E-Mail mit der Auftragsbestätigung, nachdem der Kaufvorgang im Webshop abgeschlossen wurde. +
+//*_Hinweis:_* Wenn du möchtest, dass dein:e Kund:in über diese E-Mail in die Auftragsabwicklung in deinem Webshop gelangen kann, um den Status der Bestellung einzusehen, musst du die Variable `URL zum Checkout` in die Vorlage, die du für dieses automatische Ereignis wählst, einfügen. +
+//*_Hinweis:_* Du findest die Variable in der Kategorie <<#variablen-global, Global>>.
 
 | *Sende Kunde E-Mail zur Passwortänderung*
 |Sendet Kund:innen eine E-Mail mit einem Link zum neuen Passwort, der aktiv bestätigt werden muss. Die Variable `URL zum Ändern des Passworts` muss in der Vorlage enthalten sein. +
@@ -205,6 +205,8 @@ Das Löschen einer Vorlage, die mit einem Ereignis im Schritt *Automatischer Ver
 
 |====
 --
+
+// TODO: Alle verfügbaren Ereignisse in der Tabelle mit Erklärung auflisten.
 
 Weitere Möglichkeiten, wie du den E-Mail-Versand an deine Kund:innen automatisieren kannst, sind in den Kapiteln <<#ereignisaktionen-einrichten, Ereignisaktionen einrichten>> und <<#e-mail-versand-an-mehrere-e-mail-adressen, E-Mail-Versand an mehrere E-Mail-Adressen>> beschrieben.
 
