--- a/docs/en-gb/modules/crm/pages/emailbuilder.adoc
+++ b/docs/en-gb/modules/crm/pages/emailbuilder.adoc
@@ -105,14 +105,6 @@ All emails are only sent to the saved email address. This allows you to test the
 |====
 --
 
-//// 
-[TIP]
-.Newsletter-Zugangsdaten eingeben
-====
-Go to *Setup » Client » [Select client] » Email » Newsletter*. Enter the login details to use the newsletter service that is integrated in plentymarkets. For further information, refer to the xref:crm:sending-newsletters.adoc#200[Entering newsletter login details] chapter of the xref:crm:sending-newsletters.adoc#[Newsletters] page of the manual.
-====
-////
-
 [#email-signature]
 === Saving the email signature
 
@@ -182,10 +174,10 @@ Deleting an email template that is linked with an event in the *Automatic despat
 |====
 |Setting |Explanation
 
-| *New order from online store*
-|The contacts receive an email including the order confirmation after the purchase has been completed in the online shop. +
-*_Note:_* If your customers should be able to access the order processing in your online shop with this email to see the order status, you have to insert the variable `URL to checkout` in the template that you select for this automatic event. +
-*_Note:_* You can find the variable in the <<#variables-global, Global>> category.
+//| *New order from online store*
+//|The contacts receive an email including the order confirmation after the purchase has been completed in the online shop. +
+//*_Note:_* If your customers should be able to access the order processing in your online shop with this email to see the order status, you have to insert the variable `URL to checkout` in the template that you select for this automatic event. +
+//*_Note:_* You can find the variable in the <<#variables-global, Global>> category.
 
 | *Send customer email to change password*
 |The contacts receive an email with a link to the new password. The link has to be actively confirmed. The variable `URL to change password` has to be contained in the template. +
