UPDATE order create

--- a/docs/en-gb/modules/orders/pages/working-with-orders.adoc
+++ b/docs/en-gb/modules/orders/pages/working-with-orders.adoc
@@ -791,15 +791,15 @@ You can edit the data field gross price via material:edit[]. The net price will 
 
 | *Weight [g]*
 |Shows the item weight in grams. +
-|Edit the weight in the input field if needed.
+Edit the weight in the input field if needed.
 
 | *Length [mm]*
 |Shows the length of the item in mm. +
-|Edit the length in the input field if needed.
+Edit the length in the input field if needed.
 
 | *Width [mm]*
 |Shows the width of the item in mm. +
-|Edit the width in the input field if needed.
+Edit the width in the input field if needed.
 
 | *Actions*
 |Provides further actions for the items in the context menu (material:more_vert[]) on the right.
