--- a/docs/de-de/modules/auftraege/pages/manually-create-orders.adoc
+++ b/docs/de-de/modules/auftraege/pages/manually-create-orders.adoc
@@ -4,15 +4,13 @@
 
 //adjust links to new pages where possible (auftragsdokumente once this has been moved)
 
-Anders als du vielleicht vermutest, werden Aufträge nicht direkt im Menü *Aufträge » Aufträge (Testphase)* angelegt. Wie du Aufträge im System anlegst, z.B. wenn eine Bestellung per Telefon getätigt wird, ist auf dieser Seite beschrieben. Die folgenden Möglichkeiten stehen dir für die Auftragsanlage in plentymarkets zur Verfügung:
+Wie du Aufträge im System anlegst, z.B. wenn eine Bestellung per Telefon getätigt wird, ist auf dieser Seite beschrieben. Die folgenden Möglichkeiten stehen dir für die Auftragsanlage in plentymarkets zur Verfügung:
 
-* In der <<#create-order-in-contact-overview, Kontaktübersicht>>
-* In der <<#create-order-in-order-overview, Auftragsübersicht>>
-* In den <<#create-order-via-contact, Kontaktdaten>>
-* In einem bestehenden <<#create-order-via-existing-order, Auftrag>>
 * Über einen <<#create-order-via-cash-sale, Barverkauf>>
+* Über <<#create-order-via-order, Aufträge>>
+* Über <<#create-order-via-contact, Kontakte>>
 
-Diese verschiedenen Vorgehensweisen werden nachfolgend beschrieben.
+*_Tipp:_* Die Vorgehensweise für Angebote ist identisch. Wähle im ersten Schritt der Auftragsanlage für die Einstellung *Auftragstyp* die Option *Angebot*, um ein Angebot zu erstellen.
 
 [IMPORTANT]
 .E-Mail-Versand
@@ -20,50 +18,8 @@ Diese verschiedenen Vorgehensweisen werden nachfolgend beschrieben.
 Bei manuell angelegten Aufträgen wird keine automatische E-Mail, z.B. als Auftragsbestätigung, an Kund:innen versendet. Grund dafür ist, dass das System nicht wissen kann, wann die Einstellungen zu diesem Auftrag vorgenommen wurden. Stoße daher den Versand einer xref:crm:emailbuilder.adoc#[E-Mail-Vorlage] manuell im Auftrag über die Funktion *E-Mail-Service* an.
 ====
 
-[#create-order-via-contact]
-== Auftrag über den Kontakt anlegen
-
-Im Menü *CRM » Kontakte* legst du einen neuen Auftrag wie unten beschrieben über die Kontaktdaten an.
-
-[.instruction]
-Auftrag über Kontakt anlegen:
-
-//ggf. noch anpassen, wohin man genau gelangt, wenn man auf aufträge > neuer auftrag beta klickt (neue UI)
-
-. Öffne das Menü *CRM » Kontakte*.
-. Suche den Kontakt anhand der Filtereinstellungen. Beachte dazu die Erläuterungen zu den Filtern auf der Seite xref:crm:kontakt-suchen.adoc#[Kontakt suchen]. +
-→ Die Kontakte, die den Suchkriterien entsprechen, werden angezeigt.
-. Klicke rechts in der Zeile des Kontakts auf die weiteren Optionen (material:more_vert[]). +
-→ Eine Auswahl der verfügbaren Optionen wird geöffnet.
-. Wähle die Option material:shopping_cart[] *Aufträge* > *Neuer Auftrag*. +
-→ Die Übersicht zur Anlage eines neuen Auftrags wird geöffnet.
-. Wähle die Artikel und die entsprechenden Mengen, die du zum Auftrag hinzufügen möchtest.
-. *Speichere* (material:save[]) die Einstellungen. +
-→ Der Auftrag wird angelegt.
-
-[#create-order-via-existing-order]
-== Auftrag über einen bestehenden Auftrag anlegen
-
-Dank der Verknüpfung zwischen der Auftrags-UI und der Kontakt-UI kannst du mit nur wenigen Klicks einen neuen Auftrag über einen bestehenden Auftrag anlegen. Gehe wie unten beschrieben vor, um einen neuen Auftrag anzulegen.
-
-[.instruction]
-Auftrag über einen bestehenden Auftrag anlegen:
-
-. Öffne das Menü *Aufträge » Aufträge (Testphase)*.
-. Führe die Suche (material:search[]) aus, um Aufträge anzuzeigen.
-. Öffne den Auftrag der Kund:in, für die du einen neuen Auftrag anlegen möchtest.
-. Klicke unten in der Seitennavigation auf die *Kontakt-ID*. +
-→ Der Auftrag wird im Menü *CRM » Kontakte* geöffnet.
-. Gehe in den Bereich *Aufträge*.
-. Klicke rechts auf *Optionen* (material:add[]).
-. Wähle die Option *Neuer Auftrag*. +
-→ Die Übersicht zum Erstellen eines neuen Auftrags wird geöffnet.
-. Wähle die Artikel und die Mengen, die du zum Auftrag hinzufügen möchtest.
-. *Speichere* (material:save[]) die Einstellungen. +
-→ Der Auftrag wird angelegt.
-
 [#create-order-via-cash-sale]
-== Auftrag über Barverkauf anlegen
+== Auftrag oder Angebot über Barverkauf anlegen
 
 Im Menü *CRM » Kontakte* hast du die Möglichkeit, Barverkäufe über das Kundenprofil *Barverkauf* abzuwickeln. Das Kundenprofil *Barverkauf* erlaubt dir, Aufträge ohne Kundenzuordnung anzulegen. Das Kundenprofil *Barverkauf* ist in deinem System standardmäßig eingerichtet.
 
@@ -74,28 +30,58 @@ Achte darauf, bei der Auftragsanlage über Barverkauf in den *Auftragsdaten* die
 ====
 
 [.instruction]
-Neuen Auftrag über Barverkauf anlegen:
+Auftrag oder Angebot über Barverkauf anlegen:
 
 . Öffne das Menü *CRM » Kontakte*.
 . Gib im Suchfeld *ID* die gewünschte ID ein. +
 → Eine Liste der Suchergebnisse wird eingeblendet.
 . Wähle *Barverkauf* aus der *Ergebnisliste*. +
 → Das Kundenprofil für Barverkäufe mit der gesuchten ID wird geöffnet.
-. Klicke auf *Neuer Auftrag*, um einen neuen Auftrag für einen Barverkauf anzulegen. +
-→ Die Übersicht zum Anlegen eines neuen Auftrags wird geöffnet.
-. Wähle die Artikel und die entsprechenden Mengen, die du zum Auftrag hinzufügen möchtest.
-. *Speichere* (material:save[]) die Einstellungen. +
-→ Der Auftrag wird angelegt.
+. Gehe in den Bereich *Aufträge*.
+. Klicke rechts auf *Optionen* (material:add[]).
+. Wähle die Option *Neuer Auftrag* oder *Neues Angebot*. +
+→ Die Übersicht zum Erstellen eines neuen Auftrags oder eines neuen Angebots wird geöffnet.
+. Nimm die Einstellungen vor. Beachte dazu die Erläterungen zur <<#create-order-or-offer, Anlage von Aufträgen oder Angeboten>>.
 
-[#create-order-in-order-overview]
-== Auftrag oder Angebot aus der Auftragsübersicht anlegen
+[#create-order-via-order]
+== Auftrag oder Angebot über Aufträge anlegen
 
-Im Menü *Aufträge » Aufträge (Testphase)* kannst du in der Auftragsübersicht neue Aufträge oder Angebote anlegen. Klicke dazu links in der Seitennavigation auf (material:add[role=skyBlue]) *Neuer Auftrag*. Möchtest du anstatt eines Auftrags ein Angebot anlegen, wähle im ersten Schritt für den *Auftragstyp* die Option *Angebot*. Die übrige Vorgehensweise ist identisch zur Auftrags- bzw. Angebotsanlage in der <<#create-order-in-contact-overview, Kontaktübersicht>>. Folge dazu den <<#step-one-basics, Schritten 1 bis 3>>.
+Im Menü *Aufträge » Aufträge (Testphase)* kannst du sowohl in der Auftragsübersicht als auch in der Detailansicht eines Auftrags neue Aufträge oder Angebote anlegen. Gehe dazu vor wie folgt.
 
-[#create-order-in-contact-overview]
-== Auftrag oder Angebot aus der Kontaktübersicht anlegen
+[.instruction]
+Auftrag oder Angebot über Aufträge anlegen:
 
-Dieses Kapitel beschreibt das Anlegen von Aufträgen oder Angeboten über die Kontaktübersicht im Menü *CRM » Kontakte*.
+. Öffne das Menü *Aufträge » Aufträge (Testphase)*.
+. Führe die Suche (material:search[]) aus, um Aufträge anzuzeigen.
+. Klicke links in der Seitennavigation auf (material:add[role=skyBlue]) *Neuer Auftrag*. +
+*_Tipp:_* Möchtest du anstatt eines Auftrags ein Angebot anlegen, wähle im ersten Schritt für den *Auftragstyp* die Option *Angebot*. +
+icon:map-signs[] *_Oder:_* Öffne in der Auftragsübersicht den Auftrag der Kund:in, für die du einen neuen Auftrag anlegen möchtest.
+. Klicke unten in der Seitennavigation auf die *Kontakt-ID*. +
+→ Der Auftrag wird im Menü *CRM » Kontakte* geöffnet.
+. Gehe in den Bereich *Aufträge*.
+. Klicke rechts auf *Optionen* (material:add[]).
+. Wähle die Option *Neuer Auftrag* oder *Neues Angebot*. +
+→ Die Übersicht zum Erstellen eines neuen Auftrags oder eines neuen Angebots wird geöffnet.
+. Nimm die Einstellungen vor. Beachte dazu die Erläterungen zur <<#create-order-or-offer, Anlage von Aufträgen oder Angeboten>>.
+
+[#create-order-via-contact]
+== Auftrag oder Angebot über Kontakte anlegen
+
+Aufträge oder Angebote kannst du auch über die Kontaktübersicht oder die Detailansicht eines Kontakts im Menü *CRM » Kontakte* anlegen. Nimm dazu zunächst die <<#carrying-out-standard-settings, Standardeinstellungen>> vor.
+
+[.instruction]
+Auftrag oder Angebot über Kontakte anlegen:
+
+. Öffne das Menü *CRM » Kontakte*.
+. Suche den Kontakt anhand der Filtereinstellungen. Beachte dazu die Erläuterungen zu den Filtern auf der Seite xref:crm:kontakt-suchen.adoc#[Kontakt suchen]. +
+→ Die Kontakte, die den Suchkriterien entsprechen, werden angezeigt.
+. Klicke in der Zeile des Kontakts rechts auf material:more_vert[].
+. Navigiere zu material:shopping_cart[] *Aufträge* > *Neuer Auftrag* oder *Neues Angebot*. +
+icon:map-signs[] *_Oder:_* Öffne einen Kontakt.
+. Klicke im Bereich *Aufträge* rechts auf material:add[] *Optionen*.
+. Navigiere zu *Neuer Auftrag* oder *Neues Angebot*.
+→ Du wirst automatisch zu den Auftragsdetails für den neuen Auftrag bzw. das neue Angebot weitergeleitet.
+. Nimm die Einstellungen vor. Beachte dazu die Erläuterungen zur <<#create-order-or-offer, Anlage von Aufträgen oder Angeboten>>.
 
 [#carrying-out-standard-settings]
 === Standardeinstellungen vornehmen
@@ -163,31 +149,20 @@ Diese Option ist standardmäßig deaktiviert. Lasse sie deaktiviert, wenn du die
 |===
 
 [#create-order-or-offer]
-=== Auftrag oder Angebot anlegen
+== Auftrag oder Angebot anlegen
 
-Der Auftrag oder das Angebot wird individuell für Kund:innen im Menü *CRM » Kontakte* erstellt. Die Anlage verläuft in drei Schritten. Im ersten Schritt werden <<#step-one-basics, Auftragsdetails erfasst>>, im zweiten Schritt werden <<#step-two-add-items, Artikel hinzugefügt>> und im dritten Schritt wird der <<#step-three-summary, Auftrag abgeschlossen>>. Wähle zunächst aus den Kontakten, für wen der Auftrag oder das Angebot angelegt werden soll. Gehe dabei wie im Folgenden beschrieben vor.
-
-[.instruction]
-Auftrag oder Angebot über Kontakt anlegen:
-
-. Öffne das Menü *CRM » Kontakte*.
-. Suche den Kontakt anhand der Filtereinstellungen. Beachte dazu die Erläuterungen zu den Filtern auf der Seite xref:crm:kontakt-suchen.adoc#[Kontakt suchen]. +
-→ Die Kontakte, die den Suchkriterien entsprechen, werden angezeigt.
-. Klicke in der Zeile des Kontakts ganz links auf material:more_vert[]. +
-→ Eine Auswahl der verfügbaren Optionen wird geöffnet.
-. Navigiere zu material:shopping_cart[] *Aufträge* > *Neuer Auftrag* oder *Neues Angebot*. +
-→ Du wirst automatisch zu den Auftragsdetails für den neuen Auftrag bzw. das neue Angebot weitergeleitet.
+Egal für welchen der oben beschriebenen Wege du dich entscheidest - die Anlage eines neuen Auftrags oder Angebots verläuft immer in drei Schritten. Im ersten Schritt werden <<#step-one-basics, Auftragsdetails erfasst>>, im zweiten Schritt werden <<#step-two-add-items, Artikel hinzugefügt>> und im dritten Schritt wird der <<#step-three-summary, Auftrag abgeschlossen>>. Wähle zunächst aus den Kontakten, für wen der Auftrag oder das Angebot angelegt werden soll.
 
 Oberhalb der Auftragsdetails kannst du aus der Dropdown-Liste auch nachträglich zwischen Auftrag und Angebot wählen. Zudem kannst du optional eine <<create-and-apply-order-templates, Auftragsvorlage>> aus der Dropdown-Liste wählen, die auf diesen Auftrag angewendet werden soll. In der Standardeinstellung ist hier keine Auftragsvorlage ausgewählt.
 
-Die im Folgenden beschriebenen Schritte sind für Auftrag und Angebot gleich.
+Die im Folgenden beschriebenen Schritte sind für Aufträge und Angebote gleich.
 
 Die Ansichten der Benutzeroberfläche sind so gestaltet, dass sich Aufträge schnell und übersichtlich anlegen lassen. Dies ist vor allem bei der telefonischen Aufnahme von Bestellungen von Vorteil. Zunächst werden die Auftragsdetails wie z.B. Adressen oder die Zahlungsart abgefragt. Danach werden dem Auftrag Artikel hinzugefügt, um ihn im letzten Schritt zu überprüfen und anzulegen.
 
 [#step-one-basics]
 === Schritt 1: Allgemein
 
-Da der neue Auftrag oder das neue Angebot über die Kontaktübersicht angelegt wird, werden in den Auftragsdetails bereits einige der im Kontakt hinterlegten Daten übernommen. Welche Informationen übernommen werden, hängt davon ab, welche Daten im Kontakt gespeichert sind. Ansonsten greifen die <<#carrying-out-standard-settings, Standardeinstellungen>>. Beachte dazu auch <<#table-order-details-new-order, diese Tabelle>>. Alle Angaben in den Auftragsdetails sind Pflichtfelder.
+Wenn der neue Auftrag oder das neue Angebot über die Kontaktübersicht angelegt wird, werden in den Auftragsdetails bereits einige der im Kontakt hinterlegten Daten übernommen. Welche Informationen übernommen werden, hängt davon ab, welche Daten im Kontakt gespeichert sind. Ansonsten greifen die <<#carrying-out-standard-settings, Standardeinstellungen>>. Beachte dazu auch <<#table-order-details-new-order, diese Tabelle>>.
 
 [[table-order-details-new-order]]
 .Allgemeine Einstellungen
@@ -209,51 +184,47 @@ Da der neue Auftrag oder das neue Angebot über die Kontaktübersicht angelegt w
 
 | *Rechnungsadresse*
 |Die im Datensatz des Kontaktes hinterlegte Rechnungsadresse wird übernommen. Sind mehrere Rechnungsadressen hinterlegt, wird die als primär definierte Rechnungsadresse übernommen. Wenn keine Rechnungsadresse als primäre Adresse definiert ist, kann man aus der Dropdown-Liste die gewünschte Adresse wählen. +
-Über die Vorschau (material:visibility[]) gelangst du direkt in den Kontaktatensatz. Die bereits gewählten Einstellungen in den Auftragsdetails gehen nicht verloren.
+Über die Vorschau (material:visibility[]) gelangst du direkt in den Kontaktatensatz. Die bereits gewählten Einstellungen in den Auftragsdetails gehen nicht verloren. +
+Legst du den Auftrag als *Gast* an, füge hier eine neue Rechnungsadresse hinzu.
 
 | *Lieferadresse*
 |Wenn du in der Box *Wie Rechnung* ein Häkchen setzt, wird die unter *Rechnungsadresse* eingegebene Adresse auch als Lieferadresse übernommen. Ansonsten wird die im Datensatz des Kontaktes hinterlegte Lieferadresse übernommen. Sind mehrere Lieferadressen hinterlegt, wird die als primär definierte Lieferadresse übernommen. Wenn keine Lieferadresse als primäre Adresse definiert ist, kann man aus der Dropdown-Liste die gewünschte Adresse wählen. +
 In der Dropdown-Liste hast du auch die Möglichkeit, eine neue Lieferadresse einzugeben und im Kontaktdatensatz zu speichern. Beachte dazu die Erläuterungen in der ausklappbaren Box am Ende dieses Abschnitts. +
-Über die Vorschau (material:visibility[]) gelangst du direkt in den Kontaktdatensatz. Die bereits gewählten Einstellungen in den Auftragsdetails gehen nicht verloren.
+Über die Vorschau (material:visibility[]) gelangst du direkt in den Kontaktdatensatz. Die bereits gewählten Einstellungen in den Auftragsdetails gehen nicht verloren. +
+Legst du den Auftrag als *Gast* an, füge hier eine neue Lieferadresse hinzu.
 
 | *Zahlungsart*
 |Wenn im Kontakt eine Zahlungsart definiert ist, zum Beispiel über eine xref:crm:vorbereitende-einstellungen.adoc#kundenklasse-erstellen[Kundenklasse], ist diese vorausgewählt. Ansonsten kannst du eine Zahlungsart eingeben und dann wählen. Angeboten werden dir alle Zahlungsarten, die bereits in deinem plentymarkets System integriert sind. +
-Nutzt du eine <<#create-and-apply-order-templates, Auftragsvorlage>>, wird die Zahlungsart der Auftragsvorlage genommen, sobald du die Vorlage für den Auftrag wählst. Danach ist die Zahlungsart manuell anpassbar.
+Nutzt du eine <<#create-and-apply-order-templates, Auftragsvorlage>>, wird die Zahlungsart der Auftragsvorlage verwendet, sobald du die Vorlage für den Auftrag wählst. Danach ist die Zahlungsart manuell anpassbar.
 
 | *Währung*
 |Die xref:payment:waehrungen.adoc#30[Systemwährung] ist vorausgewählt. Über die Dropdown-Liste kannst du die Währung für den Auftrag anpassen.
 
 | *Rabatt in %*
-|Du kannst hier manuell einen prozentualen Rabatt eingeben, der auf alle Auftragspositionen des Auftrags angewendet wird. Der eingegebene Wert muss zwischen 0 und 100 liegen, Werte im Minusbereich sind nicht erlaubt. +
+|Hier kannst du manuell einen prozentualen Rabatt eingeben, der auf alle Auftragspositionen des Auftrags angewendet wird. Der eingegebene Wert muss zwischen 0 und 100 liegen, Werte im Minusbereich sind nicht erlaubt. +
 Es ist ein Rabatt voreingetragen, wenn der Kontakt zu einer Kundenklasse gehört, in der die Option *Standardrabatt für manuelle Aufträge* mit einem Wert gefüllt ist. Du findest diese Option im Bereich xref:crm:vorbereitende-einstellungen.adoc#intable-customer-class-discount-type[Rabattart] im Menü *Einrichtung » CRM » Kundenklassen*. Den voreingetragenen Wert in den Auftragsdetails kannst du anpassen.
 
 | *Lager*
 |Welche Optionen dir angezeigt werden, hängt von den Grundeinstellungen ab, die du für die xref:auftraege:preparatory-settings.adoc#intable-warehouse-assignment[Zuordnung von Lagern] gewählt hast: +
 - Ist *a) pro Auftrag kann ein Lager zugeordnet werden* ausgewählt, kannst du in den Auftragsdetails aus einer Dropdown-Liste ein Lager für den Auftrag wählen. +
-- Ist *b) pro Artikelposition kann ein Lager zugeordnet werden* ausgewählt, wird dir *Abhängig vom Warenbestand* angezeigt. In der nächsten Ansicht werden dem Auftrag Artikel hinzugefügt. Dort kannst du dann für jede Variante ein Lager aus einer Dropdown-Liste wählen.
+- Ist *b) pro Artikelposition kann ein Lager zugeordnet werden* ausgewählt, wird dir *Abhängig vom Warenbestand* angezeigt. Im nächsten Schritt werden dem Auftrag Artikel hinzugefügt. Dort kannst du dann für jede Variante ein Lager aus einer Dropdown-Liste wählen.
 
 | *Mandant*
 |Wähle aus der Dropdown-Liste den Mandanten aus, für den dieser Auftrag gelten soll. Vorausgewählt ist entweder der Mandant aus den Kontaktdaten oder als nächste Option ein <<#intable-standard-mandant, Standard-Mandant>>, wenn du diesen festgelegt hast.
 
 | *Eigner*
-|Wähle aus der Dropdown-Liste den Eigner für diesen Auftrag aus. Hast du einen <<#intable-standard-eigner, Standard-Eigner>> gesetzt, ist dieser vorausgewählt. Ansonsten werden dir in der Dropdown-Liste nur Eigner angezeigt, die das Benutzerrecht haben, Aufträge zu erstellen und zu bearbeiten.
+|Wähle den Eigner für den Auftrag aus der Dropdown-Liste. Hast du einen <<#intable-standard-eigner, Standard-Eigner>> gesetzt, ist dieser vorausgewählt. Ansonsten werden dir in der Dropdown-Liste nur Eigner angezeigt, die das Benutzerrecht haben, Aufträge zu erstellen und zu bearbeiten.
 
 | *Auftragsherkunft*
-|Wähle aus der Dropdown-Liste die Herkunft für diesen Auftrag. Vorausgewählt ist entweder die Herkunft aus den Kontaktdaten oder als nächste Option eine <<#intable-standard-herkunft, Standard-Herkunft>>, wenn du diese festgelegt hast. Darüber hinaus werden nur die xref:auftraege:auftragsherkunft.adoc#[Herkünfte] angezeigt, die aktiv geschaltet sind.
+|Wähle die Herkunft für den Auftrag aus der Dropdown-Liste. Vorausgewählt ist entweder die Herkunft aus den Kontaktdaten oder als nächste Option eine <<#intable-standard-herkunft, Standard-Herkunft>>, wenn du diese festgelegt hast. Darüber hinaus werden nur die xref:auftraege:auftragsherkunft.adoc#[Herkünfte] angezeigt, die aktiv geschaltet sind.
 
 |====
-
-[TIP]
-.Auftrag als Gast anlegen
-====
-Möchtest du einen Auftrag als Gast anlegen, wähle im ersten Schritt _keinen_ Kontakt aus. Erstelle stattdessen in den Einstellungen *Rechnungsadresse* und *Lieferadresse* eine neue Rechnungsadresse bzw. eine neue Lieferadresse und speichere die Einstellungen. Anschließend kannst du mit der Auftragsanlage als Gast fortfahren.
-====
 
 [.collapseBox]
 .*Neue Lieferadresse anlegen*
 --
 
-Von der Dropdown-Liste im Feld *Lieferadresse* aus kannst du nicht nur eine bestehende Lieferadresse wählen, du kannst auch eine neue anlegen. Um eine neue Lieferadresse anzulegen, gehe wie im Folgenden beschrieben vor. +
+Von der Dropdown-Liste im Feld *Lieferadresse* aus kannst du nicht nur eine bestehende Lieferadresse wählen, du kannst auch eine neue Adresse anlegen. Um eine neue Lieferadresse anzulegen, gehe wie im Folgenden beschrieben vor. +
 *_Tipp:_* Für eine neue Rechnungsadresse sind die Einstellungen identisch.
 
 [.instruction]
@@ -274,7 +245,7 @@ Nach dem Speichern wird die neue Lieferadresse in den entsprechenden Kontaktdate
 |Einstellung |Erläuterung
 
 |*Primär*
-|Aktiviere die Option, wenn es sich bei der neuen Adresse um die primäre Lieferadresse handelt. Bei Aktivierung wird diese Lieferadresse beim Anlegen neuer Aufträge automatisch im neuen Auftrag übernommen.
+|Aktiviere die Option, wenn es sich bei der neuen Adresse um die primäre Lieferadresse handelt. Bei Aktivierung wird diese Lieferadresse beim Anlegen neuer Aufträge automatisch in den neuen Auftrag übernommen.
 
 |*Anrede*
 |Wähle optional eine Anrede aus der Dropdown-Liste.
@@ -289,7 +260,7 @@ Nach dem Speichern wird die neue Lieferadresse in den entsprechenden Kontaktdate
 |Gib den Nachname des Kontakts ein. Wenn unter *Firma* und *Vorname* kein Eintrag gemacht wurde, ist dies ein Pflichtfeld.
 
 |*Zusatz (Name 4)*
-|Gib optional Zusatzangaben zum Kontakt ein, wie z.B. z. Hd. Herrn Max Mustermann.
+|Gib optional Zusatzangaben zum Kontakt ein, wie z.B. _z. Hd. Herrn Max Mustermann_.
 
 |*Adresse 1 (Straße)* +
 *Adresse 2 (Hausnummer)*
@@ -297,7 +268,7 @@ Nach dem Speichern wird die neue Lieferadresse in den entsprechenden Kontaktdate
 *Straße* ist ein Pflichtfeld, wenn unter *Hausnummer* und *Adresszusatz* kein Eintrag gemacht wurde. *Hausnummer* ist ein Pflichtfeld, wenn unter *Straße* und *Adresszusatz* kein Eintrag gemacht wurde.
 
 |*Adresse 3 (Adresszusatz)*
-|Gib optional einen Adresszusatz ein, wie z.B. Appartement 12a. Wenn unter *Straße* und *Hausnummer* kein Eintrag gemacht wurde, ist dies ein Pflichtfeld.
+|Gib optional einen Adresszusatz ein, wie z.B. _Appartement 12a_. Wenn unter *Straße* und *Hausnummer* kein Eintrag gemacht wurde, ist dies ein Pflichtfeld.
 
 |*Adresse 4 (Frei)*
 |Dies ist ein Feld zur freien Verfügung.
@@ -334,9 +305,9 @@ Nachdem du alle Einstellungen vorgenommen hast, gehe zum nächsten Schritt weite
 In diesem Schritt werden die Auftragsdetails nicht angezeigt. Erst im dritten Schritt, der Überprüfung, sind die Auftragsdetails wieder verfügbar. *_Beachte_* allerdings, dass dort nur wenige Einstellungen bearbeitet werden können.
 
 
-Um einen Auftrag abzuschließen und ihn anzulegen, müssen zunächst Artikel hinzugefügt werden. Führe eine Suche (material:search[]) aus, um die passenden Artikel zu finden und dann hinzuzufügen. Nutze außerdem Filter, um die Suche weiter einzugrenzen.
+Um einen Auftrag anzulegen, müssen zunächst Artikel hinzugefügt werden. Führe eine Suche (material:search[]) aus, um die passenden Artikel zu finden und hinzuzufügen. Nutze außerdem Filter, um die Suche weiter einzugrenzen.
 
-Zusätzlich kannst du die Optionen *Nur aktive Artikel anzeigen*, *Nur vorrätige Artikel anzeigen*, *Nur Vertriebslager anzeigen* und *Nur Artikel mit gültigem Preis anzeigen* wählen. Wenn wie oben beschrieben deine Lagereinstellung in den Grundeinstellungen *a) pro Auftrag kann ein Lager zugeordnet werden* ist, steht dir die Option *Nur Vertriebslager anzeigen* nicht zur Verfügung, weil du das Lager bereits vorher bestimmt hast. Zudem greifen bei der Suche die <<carrying-out-standard-settings, Standardeinstellungen>>, die du vorher vorgenommen hast.
+Zusätzlich kannst du die Optionen *Nur aktive Artikel anzeigen*, *Nur vorrätige Artikel anzeigen*, *Nur Vertriebslager anzeigen* und *Nur Artikel mit gültigem Preis anzeigen* wählen. Wenn du in den Grundeinstellungen die Lagereinstellung *a) pro Auftrag kann ein Lager zugeordnet werden* gewählt hast, steht dir die Option *Nur Vertriebslager anzeigen* nicht zur Verfügung, weil du das Lager bereits bestimmt hast. Zudem greifen bei der Suche die <<carrying-out-standard-settings, Standardeinstellungen>>, die du zuvor vorgenommen hast.
 
 Anhand der Suche (material:search[]) kannst du die gewünschten Artikel finden und dem Auftrag hinzufügen. Verwende eine der folgenden Möglichkeiten, um nach Artikeln zu suchen.
 
@@ -353,37 +324,52 @@ Artikel suchen:
 |===
 |Filter |Erläuterung
 
+| *Volltext*
+|Gib etwas ein, um eine Volltextsuche zu starten.
+
 | *Artikel-ID*
-|Filtert nach der ID des Artikels.
+|Gib eine ID ein, um nach Artikeln mit dieser ID zu filtern.
 
 | *Artikelname*
-|Filtert nach dem Namen des Artikels.
+|Gib einen Namen ein, um nach Artikeln mit diesem Namen zu filtern.
 
 | *Variantennummer*
-|Filtert nach der Variantennummer des Artikels.
+|Gib eine Variantennummer ein, um nach Artikeln mit dieser Variantennummer zu filtern.
 
 | *Varianten-ID*
-|Filtert nach der Varianten-ID des Artikels.
+|Gib eine Varianten-ID ein, um nach Artikeln mit dieser Varianten-ID zu filtern.
 
 | *Barcode*
-|Filtert nach dem Barcode des Artikels.
+|Gib einen Barcode ein, um nach Artikeln mit diesem Barcode zu filtern.
 
 | *Hersteller*
-|Filtert nach dem Hersteller des Artikels.
+|Gib einen Hersteller ein, um nach Artikeln dieses Herstellers zu filtern.
 
 | *Artikel-Tag*
-|Filtert nach dem Tag des Artikels.
+|Gib ein Tag ein, um nach Artikeln mit diesem Tag zu filtern.
+
+| *Nur vorrätige Artikel anzeigen*
+|Aktiviere diese Option (material:done[role=skyBlue], um nach vorrätigen Artikeln zu filtern.
+
+| *Nur aktive Artikel anzeigen*
+|Aktiviere diese Option (material:done[role=skyBlue], um nach aktiven Artikeln zu filtern.
+
+| *Nur Vertriebslager anzeigen*
+|Aktiviere diese Option (material:done[role=skyBlue], um nach Artikeln in Vertriebslagern zu filtern.
+
+| *Nur Artikel mit gültigem Preis anzeigen*
+|Aktiviere diese Option (material:done[role=skyBlue], um nach Artikeln mit gültigem Preis zu filtern.
 
 |===
 
 [#save-search-settings]
-==== Sucheinstellungen speichern
+=== Sucheinstellungen speichern
 
 Wenn du eine Suche ausführst, werden deine gewählten Sucheinstellungen oben als Chips dargestellt.
 Diese Sucheinstellungen kannst du speichern, um sie in Zukunft schneller und einfacher wieder verwenden zu können.
 
 [#save-current-filter]
-===== Aktuellen Filter speichern
+==== Aktuellen Filter speichern
 
 . Führe eine Suche aus.
 . Klicke auf *Gespeicherte Filter* (material:bookmarks[role=darkGrey]).
@@ -394,7 +380,7 @@ Diese Sucheinstellungen kannst du speichern, um sie in Zukunft schneller und ein
 
 
 [#use-saved-filters]
-===== Gespeicherte Filter anwenden
+==== Gespeicherte Filter anwenden
 
 . Klicke auf *Gespeicherte Filter* (material:bookmarks[role=darkGrey]).
 . Klicke auf eine bereits erstellte Filtereinstellung. +
@@ -411,7 +397,7 @@ Tabelle individualisieren:
 . Klicke auf *Spalten konfigurieren* (material:settings[]). +
 → Das Fenster *Spalten konfigurieren* wird geöffnet.
 . Wähle, welche Spalten angezeigt werden sollen. Beachte dazu die Einstellungen in <<table-overview-item-search>>.
-. Verschiebe (material:sort[]) die Spalten so, dass sie in der gewünschten Reihenfolge angezeigt werden.
+. Verschiebe (material:drag_indicator[]) die Spalten so, dass sie in der gewünschten Reihenfolge angezeigt werden.
 . Klicke auf *Bestätigen*, um deine Auswahl zu speichern.
 
 Wenn du die Tabelle einmal angepasst hast, wird diese Auswahl gespeichert. Die Tabelle bleibt also gleich, auch wenn du diesen Auftrag abgeschlossen hast und weitere Aufträge anlegst. Du kannst das Layout jederzeit ändern. Die zur Verfügung stehenden Spalten findest du in <<table-overview-item-search>>. Dort ist zu jeder Spalte auch die Information hinterlegt, ob es sich um eine Standardspalte handelt. Standardspalten werden angezeigt, wenn die Tabelle nicht individualisiert ist.
@@ -497,7 +483,7 @@ Diese Spalte ist eine Standardspalte.
 Bei Mengenänderungen ändert sich der Verkaufspreis, daher muss der Verkaufspreis aktualisiert werden. Klicke dafür auf *Verkaufspreis aktualisieren* (material:refresh[]). Nach der Aktualisierung ist die Warenkorb-Schaltfläche (material:add_shopping_cart[]) wieder verfügbar und die Artikel können hinzugefügt werden. +
 Diese Spalte ist eine Standardspalte.
 
-|*Warenkorb-Icon*
+|*Warenkorb-Symbol*
 |Durch Klick auf den Warenkorb (material:add_shopping_cart[]) wird der Artikel in der ausgewählten *Menge* dem Warenkorb hinzugefügt. +
 Diese Spalte ist eine Standardspalte.
 
@@ -631,6 +617,18 @@ Diese Spalte ist eine Standardspalte.
 |Die Umsatzsteuer wird in % angezeigt. Voreingestellt sind 19.00 %. Über die Dropdown-Liste kannst du den Steuersatz ändern. +
 Diese Spalte ist eine Standardspalte.
 
+| *Gewicht [g]*
+|Zeigt das Gewicht des Artikels in Gramm an. Passe das Gewicht bei Bedarf im Eingabefeld an. +
+Diese Spalte ist keine Standardspalte.
+
+| *Länge [mm]*
+|Zeigt die Länge des Artikels in mm an. Passe die Länge bei Bedarf im Eingabefeld an. +
+Diese Spalte ist keine Standardspalte.
+
+| *Breite [mm]*
+|Zeigt die Breite des Artikels in mm an. Passe die Breite bei Bedarf im Eingabefeld an. +
+Diese Spalte ist keine Standardspalte.
+
 | *Aktionen*
 |Ist dieses Feld gewählt, sind die Aktionen zum Bearbeiten (material:edit[]) und Löschen (material:delete[]) des Artikels verfügbar.
 |===
@@ -643,7 +641,7 @@ Tabelle individualisieren:
 . Klicke auf *Spalten konfigurieren* (material:settings[]). +
 → Das Fenster *Spalten konfigurieren* wird geöffnet.
 . Wähle, welche Spalten angezeigt werden sollen.
-. Verschiebe (material:sort[]) die Spalten, sodass sie in der Reihenfolge angezeigt werden, in der du sie benötigst.
+. Verschiebe (material:drag_indicator[]) die Spalten, sodass sie in der Reihenfolge angezeigt werden, in der du sie benötigst.
 . Klicke auf *Bestätigen*, um deine Auswahl zu speichern.
 
 --
@@ -667,8 +665,8 @@ Im Bearbeitungsfenster findest du folgende Angaben zu der Eigenschaft einer Auft
 * *Aufpreis* = Der Aufpreis der Eigenschaft, sofern ein Aufpreis zugeordnet ist, wird angezeigt. Der Aufpreis kann bearbeitet werden. Die Änderungen gelten nur für diesen Auftrag.
 
 In diesem Fenster gibt es außerdem weitere Bearbeitungsmöglichkeiten. Durch Klicken auf *Löschen* (material:delete[]) entfernst du eine Eigenschaft von einer Auftragsposition. Diese Eigenschaft wird dann für diesen Auftrag nicht berücksichtigt. +
-Du kannst weitere bereits angelegte Eigenschaften hinzufügen. Wähle eine Eigenschaft aus der Dropdown-Liste des Felds *Eigenschaft wählen* und füge sie durch Klicken auf *Eigenschaft hinzufügen* (material:add[role=green]) zu dieser Auftragsposition hinzu. +
-Hast du alle erforderlichen Anpassungen vorgenommen, klicke auf *Eigenschaften speichern*. Klickst du auf *Verwerfen*, wird keine der vorgenommenen Änderungen übernommen. Das Bearbeitungsfenster wird geschlossen und du kannst nach Bedarf die Eigenschaften weiterer Auftragspositionen auf die gleiche Weise bearbeiten.
+Du kannst weitere bereits angelegte Eigenschaften hinzufügen. Wähle eine Eigenschaft aus der Dropdown-Liste des Felds *Eigenschaft wählen* und füge sie durch Klicken auf *Eigenschaft hinzufügen* (material:add[]) zu dieser Auftragsposition hinzu. +
+Hast du alle erforderlichen Anpassungen vorgenommen, klicke auf *Eigenschaften speichern*. Klickst du auf *Abbrechen*, wird keine der vorgenommenen Änderungen übernommen. Das Bearbeitungsfenster wird geschlossen und du kannst nach Bedarf die Eigenschaften weiterer Auftragspositionen auf die gleiche Weise bearbeiten.
 
 Wenn du die Eigenschaften auf Dokumenten ausgeben lassen möchtest, musst du dies in der Konfiguration der Eigenschaften einstellen. Stelle sicher, dass im Bereich xref:artikel:eigenschaften.adoc#property-visibilities[Sichtbarkeiten]
 
@@ -691,47 +689,40 @@ Im letzten Schritt wird der Auftrag abgeschlossen. Oberhalb der Auftragsdetails 
 * Auftragsrabatt: Zeigt den Rabattbetrag an, der sich durch den im ersten Schritt der Auftragsanlage vergebenen Rabatt ergibt. Errechnet wird der summierte Rabatt für alle Auftragspositionen. Der Statusbalken ist orange, wenn im ersten Schritt ein Rabatt gesetzt wurde. Ansonsten ist der Statusbalken grau.
 * Offener Betrag: Zeigt den von der Kund:in zu zahlenden Rechnungsbetrag an. Der Statusbalken ist grün, wenn der Betrag bei null liegt, d.h. wenn der Auftrag vollständig bezahlt wurde. Rot bedeutet, dass der vollständige Rechnungsbetrag noch offen ist. Orange bedeutet, dass ein Teil des Rechnungsbetrags noch offen ist.
 
-In den Auftragsdetails kannst du die *Versandart* und die *Versandkosten* anpassen. +
+In den Auftragsdetails kannst du die *Zahlungsart*, die *Versandkosten*, die *Versandart* sowie den *Eigner* bei Bedarf noch einmal anpassen. +
 Außerdem kannst du einen oder mehrere *Gutscheincodes* eingeben, die mit diesem Auftrag eingelöst werden. Drücke nach Eingabe des Codes auf _Enter_ oder klicke mit der Maus außerhalb des Felds. Es wird sofort überprüft, ob der Gutscheincode einlösbar ist. Einlösbare Gutscheine werden in grün mit dem Wert des Gutscheins wiedergegeben. Ein Tooltip zeigt an, um welche Art von Gutschein es sich handelt. Gutscheine, die nicht einlösbar sind, werden in rot mit der Info *Nicht einlösbar* angezeigt. Du kannst bei Bedarf auch mehrere Codes eingeben. +
 Die Werte der Gutscheine werden mit dem Auftragswert verrechnet. Gutscheine werden nicht als Auftragspositionen im Warenkorb hinzugefügt. Gutscheine können nicht für Angebote eingelöst werden. Dies bedeutet, dass das Eingabefeld *Gutscheincodes* nur in der Auftragserstellung, nicht aber in der Angebotserstellung verfügbar ist.
 
-Unterhalb der Auftragsdetails wird eine Tabelle mit den ausgewählten Artikelpositionen angezeigt. Zusätzlich zu den Angaben in der vorherigen Ansicht werden dir in dieser weitere Preise und die Umsatzsteuer ausgegeben. Steuersätze lassen sich anpassen, wenn du dies in den <<#carrying-out-standard-settings, Standardeinstellungen>> erlaubt hast. +
-
-//Artikelbeschreibung anpassen noch gültig??
-
-Außerdem kannst du in dieser Tabelle die *Artikelbeschreibung* individuell anpassen. Die angepasste Artikelbeschreibung wird nur für diesen Auftrag übernommen. Das bedeutet, dass die angepasste Beschreibung für die Auftragsdaten und auch die Auftragsdokumente dieses Auftrags übernommen wird. Außerhalb dieses Auftrags bleibt die bereits im System hinterlegte Artikelbeschreibung bestehen. Beachte, dass es für die Artikelbeschreibung eine Beschränkung von 1500 Zeichen gibt.
+Unterhalb der Auftragsdetails wird eine Tabelle mit den ausgewählten Artikelpositionen angezeigt. Zusätzlich zu den Angaben in der vorherigen Ansicht werden dir hier weitere Preise und die Umsatzsteuer ausgegeben. Die Steuersätze kannst du anpassen, wenn du dies in den <<#carrying-out-standard-settings, Standardeinstellungen>> erlaubt hast.
 
 [.collapseBox]
 .*Tabelle individualisieren*
 --
-Die Tabelle im letzten Schritt der Auftragsanlage lässt sich individuell anpassen. Du kannst wählen, welche Tabellenspalten dir in welcher Reihenfolge angezeigt werden sollen. Standardmäßig werden dir beim Öffnen des Menüs folgende Tabellenspalten angezeigt:
+Die Tabelle im letzten Schritt der Auftragsanlage lässt sich individuell anpassen. Du kannst wählen, welche Tabellenspalten dir in welcher Reihenfolge angezeigt werden sollen. Die folgenden Tabellenspalten sind verfügbar:
 
-//Tabellenspalten prüfen
-
-* Artikel-ID/Varianten-ID
-* Varianten Nr.
-* Artikelname
-* Attribute
-* Variantenname
-* System-EK
-* Preisauswahl
-* Nettopreis
-* Bruttopreis
-* Gesamtsumme = Der Artikelpreis zuzüglich Aufschläge für Bestelleigenschaften.
-* Rabatt = Beinhaltet den Rabatt, der in den Auftragsdetails im ersten Schritt der Auftragsanlage eingegeben wurde.
-* Lager
-* USt. %
-* Löschen-Icon
-
-Die folgenden Tabellenspalten können ebenfalls ausgewählt werden, sind standardmäßig aber nicht sichtbar:
-
+* Ausklappen
 * Menge
 * Artikel-ID
+* Variantennr.
+* Variantenname
 * Varianten-ID
-* Barcode
-* Aufpreis gesamt = Die Summe der Aufschläge für Bestelleigenschaften.
-* Kundenklassenrabatt = Der für den ausgewählten Verkaufspreis angewendete Kundenklassenrabatt in Prozent.
-* Kategorierabatt = Der für den ausgewählten Verkaufspreis angewendete Kategorierabatt in Prozent.
+* Artikelname
+* Attribute
+* Nettopreis
+* Regulärer Nettopreis
+* Bruttopreis
+* Rabatt
+* Aufpreis gesamt
+* Gesamtbetrag (netto)
+* Gesamtbetrag (brutto)
+* Lager
+* USt.
+* Externe Artikel-ID
+* Externe Auftragspositions-ID
+* Eigenschafts-ID
+* Lagerorte
+* Gewinnspanne (netto)
+* Nachbestellungs-ID
 
 Passe die Tabelle deinen Bedürfnissen und deinem Arbeitsablauf an. Wenn du die Tabelle angepasst hast, wird diese Auswahl gespeichert. Du kannst die Tabelle jederzeit anpassen.
 
@@ -741,12 +732,12 @@ Tabelle individualisieren:
 . Klicke auf *Spalten konfigurieren* (material:settings[]). +
 → Das Fenster *Spalten konfigurieren* wird geöffnet.
 . Wähle, welche Spalten angezeigt werden sollen.
-. Verschiebe (material:sort[]) die Spalten, sodass sie in der Reihenfolge angezeigt werden, in der du sie benötigst.
+. Verschiebe (material:drag_indicator[]) die Spalten, sodass sie in der Reihenfolge angezeigt werden, in der du sie benötigst.
 . Klicke auf *Bestätigen*, um deine Auswahl zu speichern.
 
 --
 
-Wenn du Änderungen an den Versandkosten oder der Versandart vornimmst oder Gutscheine hinzufügst, werden die Gesamtsummen automatisch neu berechnet. Um den Auftrag fertigzustellen, klicke auf material:save[] *Auftrag anlegen*. Der Auftrag ist nun erstellt und je nach Einstellung wirst du in die entsprechende Ansicht weitergeleitet. Der Auftrag ist anschließend in der Auftragsübersicht im Menü *Aufträge » Aufträge (Testphase)* verfügbar.
+Wenn du Änderungen an den Versandkosten oder der Versandart vornimmst oder Gutscheine hinzufügst, werden die Gesamtsummen automatisch neu berechnet. Um den Auftrag fertigzustellen, klicke auf material:save[role=green] *Auftrag anlegen*. Der Auftrag ist nun erstellt und je nach Einstellung wirst du in die entsprechende Ansicht weitergeleitet. Der Auftrag ist anschließend in der Auftragsübersicht im Menü *Aufträge » Aufträge (Testphase)* verfügbar.
 
 
 [#create-and-apply-order-templates]
