--- a/docs/en-gb/modules/markets/pages/otto-market.adoc
+++ b/docs/en-gb/modules/markets/pages/otto-market.adoc
@@ -142,7 +142,7 @@ a| Select the shipping service provider that is to be used if return tracking nu
 --
 
 [#275]
-=== Activating an order referrer
+=== Activating the order referrer
 
 :market: OTTO Market
 :referrer: OTTO Market
@@ -630,6 +630,31 @@ include::partial$checklist-variations.adoc[tag=checklist-check-log]
 :market: OTTO Market
 
 include::partial$catalogue-activation.adoc[]
+
+[#deactivating-items]
+== Deactivating items on OTTO Market
+
+Variations cannot be sold on OTTO Market if they do not have stock in plentymarkets. As stock data is transferred to OTTO Market every 15 minutes, variations without stock are deleted automatically. If a variation has stock again in plentymarkets, it is offered again on OTTO Market with the next stock export.
+
+If you do not want to sell a variation which is in stock in plentymarkets on OTTO Market, then you have to delete the availability for the market and update the timestamp for market exports.
+
+[.instruction]
+Deleting the availability:
+
+. Go to *Item » Edit item » [Open item] » [Open variation] » Variation tab: Availability*.
+. *Delete* (icon:minus-circle[role="red"]) the availability *OTTO market*.
+. *Save* (terra:save[]) the settings.
+
+After you removed the availability, you have to *Update the timestamp for market exports* using the *Item group function*. This ensures that a stock of *0* is transferred to OTTO Market.
+
+[.instruction]
+Updating the timestamp for market exports:
+
+. Go to *Item » Edit item » Tab: Item group function*.
+. Place a check mark next to *Update timestamp for market exports*.
+. Click on terra:execute[] *Execute*. +
+→ A stock of *0* is transferred to OTTO Market. +
+→ The variation is deactivated on OTTO Market and cannot be bought any longer.
 
 [#1050]
 == OTTO Market order management
