Added missing filter and info about tooltip

--- a/docs/en-gb/modules/markets/pages/amazon-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/amazon-setup.adoc
@@ -263,7 +263,8 @@ Reports can have the following statuses: +
 *Done* (material:circle[role=green]) = The report was processed.
 
 | *Report type*
-| The report type. An overview of all Amazon report types is available <<#amazon-report-types, here>>.
+| The report type. An overview of all Amazon report types is available <<#amazon-report-types, here>>. +
+If you hover over a report type, a tooltip with information about this report type is shown.
 
 | *Report created on*
 | Shows the date and the time when the report was created.
@@ -372,6 +373,9 @@ Applying filters:
 
 | *Processing status*
 | Select *Skipped*, *Pending*, or *Done* from the drop-down list. Only reports in this status will be displayed.
+
+| *Report type*
+| Select a report type from the drop-down list to only display reports of this type.
 
 | *Added from*
 | Enter a date in the format *D.M.YYYY* or select a date via the calendar (material:today[]). You can also enter a time in the *Added time from* line or select a time via (material:schedule[]). +
