UPDATE order create

--- a/docs/de-de/modules/auftraege/pages/auftraege-verwalten.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftraege-verwalten.adoc
@@ -101,7 +101,7 @@ icon:map-signs[] *_Oder:_* Öffne einen Kontakt.
 → Du wirst automatisch zu den Auftragsdetails für den neuen Auftrag bzw. das neue Angebot weitergeleitet.
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen zur <<#create-order-or-offer, Anlage von Aufträgen oder Angeboten>>.
 
-[#250]
+[#carrying-out-standard-settings]
 ==== Standardeinstellungen vornehmen
 
 Beim Anlegen von Aufträgen und Angeboten über die Kontaktübersicht werden Daten, wie zum Beispiel Adressen oder Mandanten, direkt aus dem Kontakt übernommen, wenn sie dort hinterlegt sind. Die Kontaktdaten haben in der Regel also Priorität. Zusätzlich stehen dir einige Standardeinstellungen zur Verfügung, auf die zurückgegriffen wird, wenn eine Information nicht aus dem Kontakt genommen wird. +
@@ -179,7 +179,7 @@ Die Ansichten der Benutzeroberfläche sind so gestaltet, dass sich Aufträge sch
 [#step-one-basics]
 ==== Schritt 1: Allgemein
 
-Da der neue Auftrag oder das neue Angebot über die Kontaktübersicht angelegt wird, werden in den Auftragsdetails bereits einige der im Kontakt hinterlegten Daten übernommen. Welche Informationen übernommen werden, hängt davon ab, welche Daten im Kontakt gespeichert sind. Ansonsten greifen die xref:auftraege:auftraege-verwalten.adoc#250[Standardeinstellungen]. Beachte dazu auch <<table-order-details-new-order>>.
+Wenn der neue Auftrag oder das neue Angebot über die Kontaktübersicht angelegt wird, werden in den Auftragsdetails bereits einige der im Kontakt hinterlegten Daten übernommen. Welche Informationen übernommen werden, hängt davon ab, welche Daten im Kontakt gespeichert sind. Ansonsten greifen die <<#carrying-out-standard-settings, Standardeinstellungen>>. Beachte dazu auch <<#table-order-details-new-order, diese Tabelle>>.
 
 [[table-order-details-new-order]]
 .Allgemeine Einstellungen
@@ -191,7 +191,7 @@ Da der neue Auftrag oder das neue Angebot über die Kontaktübersicht angelegt w
 |Wähle den Typ des Auftrags aus der Dropdown-Liste.
 
 | *Auftragsvorlage*
-|Wähle die Vorlage für den Auftrag aus der Dropdown-Liste.
+|Wähle die Vorlage des Auftrags aus der Dropdown-Liste.
 
 | *Kontakt*
 |Wenn du den Auftrag über das Menü *CRM » Kontakte* anlegst, ist hier der Name des Kontakts bereits vorausgewählt. Möchtest du einen anderen Kontakt wählen, gib mindestens 3 Buschstaben ein, um Vorschläge zu sehen. Alternativ kannst du auch die E-Mail-Adresse des Kontakts eingeben. Alle am Kontakt hinterlegten Daten werden automatisch in die anderen Felder eingefügt. +
@@ -200,19 +200,19 @@ Da der neue Auftrag oder das neue Angebot über die Kontaktübersicht angelegt w
 2+^| *Auftragsdetails*
 
 | *Rechnungsadresse*
-|Die im Datensatz des Kontakts hinterlegte Rechnungsadresse wird übernommen. Sind mehrere Rechnungsadressen hinterlegt, wird die als primär definierte Rechnungsadresse übernommen. Wenn keine Rechnungsadresse als primäre Adresse definiert ist, kannst du aus der Dropdown-Liste die gewünschte Adresse wählen. +
+|Die im Datensatz des Kontaktes hinterlegte Rechnungsadresse wird übernommen. Sind mehrere Rechnungsadressen hinterlegt, wird die als primär definierte Rechnungsadresse übernommen. Wenn keine Rechnungsadresse als primäre Adresse definiert ist, kann man aus der Dropdown-Liste die gewünschte Adresse wählen. +
 Über die Vorschau (material:visibility[]) gelangst du direkt in den Kontaktatensatz. Die bereits gewählten Einstellungen in den Auftragsdetails gehen nicht verloren. +
 Legst du den Auftrag als *Gast* an, füge hier eine neue Rechnungsadresse hinzu.
 
 | *Lieferadresse*
-|Wenn du in der Box *Wie Rechnung* ein Häkchen setzt, wird die unter *Rechnungsadresse* eingegebene Adresse auch als Lieferadresse übernommen. Ansonsten wird die im Datensatz des Kontakts hinterlegte Lieferadresse übernommen. Sind mehrere Lieferadressen hinterlegt, wird die als primär definierte Lieferadresse übernommen. Wenn keine Lieferadresse als primäre Adresse definiert ist, kannst du aus der Dropdown-Liste die gewünschte Adresse wählen. +
+|Wenn du in der Box *Wie Rechnung* ein Häkchen setzt, wird die unter *Rechnungsadresse* eingegebene Adresse auch als Lieferadresse übernommen. Ansonsten wird die im Datensatz des Kontaktes hinterlegte Lieferadresse übernommen. Sind mehrere Lieferadressen hinterlegt, wird die als primär definierte Lieferadresse übernommen. Wenn keine Lieferadresse als primäre Adresse definiert ist, kann man aus der Dropdown-Liste die gewünschte Adresse wählen. +
 In der Dropdown-Liste hast du auch die Möglichkeit, eine neue Lieferadresse einzugeben und im Kontaktdatensatz zu speichern. Beachte dazu die Erläuterungen in der ausklappbaren Box am Ende dieses Abschnitts. +
 Über die Vorschau (material:visibility[]) gelangst du direkt in den Kontaktdatensatz. Die bereits gewählten Einstellungen in den Auftragsdetails gehen nicht verloren. +
 Legst du den Auftrag als *Gast* an, füge hier eine neue Lieferadresse hinzu.
 
 | *Zahlungsart*
 |Wenn im Kontakt eine Zahlungsart definiert ist, zum Beispiel über eine xref:crm:vorbereitende-einstellungen.adoc#kundenklasse-erstellen[Kundenklasse], ist diese vorausgewählt. Ansonsten kannst du eine Zahlungsart eingeben und dann wählen. Angeboten werden dir alle Zahlungsarten, die bereits in deinem plentymarkets System integriert sind. +
-Nutzt du eine xref:auftraege:auftraege-verwalten.adoc#295[Auftragsvorlage], wird die Zahlungsart der Auftragsvorlage verwendet, sobald du die Vorlage für den Auftrag wählst. Danach ist die Zahlungsart manuell anpassbar.
+Nutzt du eine <<#create-and-apply-order-templates, Auftragsvorlage>>, wird die Zahlungsart der Auftragsvorlage verwendet, sobald du die Vorlage für den Auftrag wählst. Danach ist die Zahlungsart manuell anpassbar.
 
 | *Währung*
 |Die xref:payment:waehrungen.adoc#30[Systemwährung] ist vorausgewählt. Über die Dropdown-Liste kannst du die Währung für den Auftrag anpassen.
@@ -222,18 +222,18 @@ Nutzt du eine xref:auftraege:auftraege-verwalten.adoc#295[Auftragsvorlage], wird
 Es ist ein Rabatt voreingetragen, wenn der Kontakt zu einer Kundenklasse gehört, in der die Option *Standardrabatt für manuelle Aufträge* mit einem Wert gefüllt ist. Du findest diese Option im Bereich xref:crm:vorbereitende-einstellungen.adoc#intable-customer-class-discount-type[Rabattart] im Menü *Einrichtung » CRM » Kundenklassen*. Den voreingetragenen Wert in den Auftragsdetails kannst du anpassen.
 
 | *Lager*
-|Welche Optionen dir angezeigt werden, hängt von den Grundeinstellungen ab, die du für die xref:auftraege:grundeinstellungen.adoc#intable-warehouse-assignment[Zuordnung von Lagern] gewählt hast: +
+|Welche Optionen dir angezeigt werden, hängt von den Grundeinstellungen ab, die du für die xref:auftraege:preparatory-settings.adoc#intable-warehouse-assignment[Zuordnung von Lagern] gewählt hast: +
 - Ist *a) pro Auftrag kann ein Lager zugeordnet werden* ausgewählt, kannst du in den Auftragsdetails aus einer Dropdown-Liste ein Lager für den Auftrag wählen. +
 - Ist *b) pro Artikelposition kann ein Lager zugeordnet werden* ausgewählt, wird dir *Abhängig vom Warenbestand* angezeigt. Im nächsten Schritt werden dem Auftrag Artikel hinzugefügt. Dort kannst du dann für jede Variante ein Lager aus einer Dropdown-Liste wählen.
 
 | *Mandant*
-|Wähle aus der Dropdown-Liste den Mandanten aus, für den dieser Auftrag gelten soll. Vorausgewählt ist entweder der Mandant aus den Kontaktdaten oder als nächste Option ein xref:auftraege:auftraege-verwalten.adoc#intable-standard-mandant[Standard-Mandanten], wenn du diesen festgelegt hast.
+|Wähle aus der Dropdown-Liste den Mandanten aus, für den dieser Auftrag gelten soll. Vorausgewählt ist entweder der Mandant aus den Kontaktdaten oder als nächste Option ein <<#intable-standard-mandant, Standard-Mandant>>, wenn du diesen festgelegt hast.
 
 | *Eigner*
-|Wähle den Eigner für den Auftrag aus der Dropdown-Liste. Hast du einen xref:auftraege:auftraege-verwalten.adoc#intable-standard-eigner[Standard-Eigner] gesetzt, ist dieser vorausgewählt. Ansonsten werden dir in der Dropdown-Liste nur Eigner angezeigt, die das Benutzerrecht haben, Aufträge zu erstellen und zu bearbeiten.
+|Wähle den Eigner für den Auftrag aus der Dropdown-Liste. Hast du einen <<#intable-standard-eigner, Standard-Eigner>> gesetzt, ist dieser vorausgewählt. Ansonsten werden dir in der Dropdown-Liste nur Eigner angezeigt, die das Benutzerrecht haben, Aufträge zu erstellen und zu bearbeiten.
 
 | *Auftragsherkunft*
-|Wähle die Herkunft für den Auftrag aus der Dropdown-Liste. Vorausgewählt ist entweder die Herkunft aus den Kontaktdaten oder als nächste Option eine xref:auftraege:auftraege-verwalten.adoc#intable-standard-herkunft[Standard-Herkunft], wenn du diese festgelegt hast. Darüber hinaus werden nur die xref:auftraege:auftragsherkunft.adoc#[Herkünfte] angezeigt, die aktiv geschaltet sind.
+|Wähle die Herkunft für den Auftrag aus der Dropdown-Liste. Vorausgewählt ist entweder die Herkunft aus den Kontaktdaten oder als nächste Option eine <<#intable-standard-herkunft, Standard-Herkunft>>, wenn du diese festgelegt hast. Darüber hinaus werden nur die xref:auftraege:auftragsherkunft.adoc#[Herkünfte] angezeigt, die aktiv geschaltet sind.
 
 |====
 
@@ -258,7 +258,7 @@ Nach dem Speichern wird die neue Lieferadresse in den entsprechenden Kontaktdate
 [[table-new-delivery-address]]
 .Auftragsdetails: Neue Lieferadresse anlegen
 [cols="1,3"]
-|===
+|====
 |Einstellung |Erläuterung
 
 |*Primär*
@@ -310,101 +310,22 @@ Bei bestimmten Ländern, z.B. Vereinigtes Königreich, wird die Reihenfolge der 
 |Wähle einen Typ aus der Dropdown-Liste. Zur Verfügung stehen: Umsatzsteuernummer, Externe Adress-ID, Gelangensbestätigung, Postnummer, Personennummer, FSK, Geburtstag, Titel, Ansprechpartner, Externe Kunden-ID. Gib den passenden *Wert* für den ausgewählten Typ ein. +
 Über *Adressoption hinzufügen* kannst du weitere *Typen* mit den dazugehörigen *Werten* hinzufügen.
 
-|===
+|====
 
 --
 
-Nachdem du alle Einstellungen vorgenommen hast, gehe zum nächsten Schritt weiter, indem du unten auf *ARTIKEL HINZUFÜGEN* klickst. Alternativ kannst du auch oben auf den 2. Schritt *Artikel hinzufügen* klicken. Die Auftragsdetails werden gespeichert und du wirst zum nächsten Arbeitsschritt geleitet. In diesem Schritt fügst du dem Auftrag Artikel hinzu.
+Nachdem du alle Einstellungen vorgenommen hast, gehe zum nächsten Schritt weiter, indem du unten auf *ARTIKEL HINZUFÜGEN* klickst. Alternativ kannst du auch oben auf den Schritt *Artikel hinzufügen* klicken. Die Auftragsdetails werden gespeichert und du wirst zum nächsten Arbeitsschritt geleitet. In diesem Schritt fügst du dem Auftrag Artikel hinzu.
 
 [#step-two-add-items]
 ==== Schritt 2: Artikel hinzufügen
 
-In diesem Schritt werden die Auftragsdetails nicht angezeigt. Erst im dritten Schritt, der Überprüfung, sind die Auftragsdetails wieder verfügbar. *_Beachte_* allerdings, dass dort nur wenige Einstellungen bearbeitet werden können.
+Sobald du alle Auftragsdetails in Schritt 1 eingetragen hast, kannst du nun in einem weiteren Schritt deine gewünschten Artikel zum Auftrag hinzufügen. In diesem Schritt werden die Auftragsdetails nicht angezeigt. Erst im dritten Schritt, der Zusammenfassung, sind die Auftragsdetails wieder verfügbar. *_Beachte_* allerdings, dass dort nur wenige Einstellungen bearbeitet werden können.
 
-Um einen Auftrag anzulegen, müssen zunächst Artikel hinzugefügt werden. Führe eine Suche (material:search[]) aus, um die passenden Artikel zu finden und hinzuzufügen. Nutze außerdem Filter, um die Suche weiter einzugrenzen.
+[.collapseBox]
+.*Artikeltabelle individualisieren*
+--
 
-Zusätzlich kannst du in den Filtern die Optionen *Nur aktive Artikel anzeigen*, *Nur vorrätige Artikel anzeigen*, *Nur Vertriebslager anzeigen* und *Nur Artikel mit gültigem Preis anzeigen* wählen. Wenn du in den Grundeinstellungen die Lagereinstellung *a) pro Auftrag kann ein Lager zugeordnet werden* gewählt hast, steht dir die Option *Nur Vertriebslager anzeigen* nicht zur Verfügung, weil du das Lager bereits bestimmt hast. Zudem greifen bei der Suche die xref:auftraege:auftraege-verwalten.adoc#250[Standardeinstellungen], die du zuvor vorgenommen hast.
-
-Anhand der Suche (material:search[]) kannst du die gewünschten Artikel finden und dem Auftrag hinzufügen. Verwende eine der folgenden Möglichkeiten, um nach Artikeln zu suchen.
-
-[.instruction]
-Artikel suchen:
-
-.. *_Möglichkeit 1:_* Klicke auf material:search[], um direkt eine Liste aller Artikel zu sehen.
-.. *_Möglichkeit 2:_* Gib etwas in das Suchfeld ein und klicke auf einen der automatischen Vorschläge.
-.. *_Möglichkeit 3:_* Klicke auf material:tune[], um die Suchergebnisse mit Hilfe von Filtern einzugrenzen. Die folgende Tabelle listet alle verfügbaren Filter.
-
-[[table-order-filters]]
-.Filter für Auftragspositionen
-[cols="1,3"]
-|===
-|Filter |Erläuterung
-
-| *Volltext*
-|Gib etwas ein, um eine Volltextsuche zu starten.
-
-| *Artikel-ID*
-|Gib eine ID ein, um nach Artikeln mit dieser ID zu filtern.
-
-| *Artikelname*
-|Gib einen Namen ein, um nach Artikeln mit diesem Namen zu filtern.
-
-| *Variantennummer*
-|Gib eine Variantennummer ein, um nach Artikeln mit dieser Variantennummer zu filtern.
-
-| *Varianten-ID*
-|Gib eine Varianten-ID ein, um nach Artikeln mit dieser Varianten-ID zu filtern.
-
-| *Barcode*
-|Gib einen Barcode ein, um nach Artikeln mit diesem Barcode zu filtern.
-
-| *Hersteller*
-|Gib einen Hersteller ein, um nach Artikeln dieses Herstellers zu filtern.
-
-| *Artikel-Tag*
-|Gib ein Tag ein, um nach Artikeln mit diesem Tag zu filtern.
-
-| *Nur vorrätige Artikel anzeigen*
-|Aktiviere diese Option (material:done[role=skyBlue], um nach vorrätigen Artikeln zu filtern.
-
-| *Nur aktive Artikel anzeigen*
-|Aktiviere diese Option (material:done[role=skyBlue], um nach aktiven Artikeln zu filtern.
-
-| *Nur Vertriebslager anzeigen*
-|Aktiviere diese Option (material:done[role=skyBlue], um nach Artikeln in Vertriebslagern zu filtern.
-
-| *Nur Artikel mit gültigem Preis anzeigen*
-|Aktiviere diese Option (material:done[role=skyBlue], um nach Artikeln mit gültigem Preis zu filtern.
-
-|===
-
-[#save-search-settings]
-==== Sucheinstellungen speichern
-
-Wenn du eine Suche ausführst, werden deine gewählten Sucheinstellungen oben als Chips dargestellt.
-Diese Sucheinstellungen kannst du speichern, um sie in Zukunft schneller und einfacher wieder verwenden zu können.
-
-[#save-current-filter]
-==== Aktuellen Filter speichern
-
-. Führe eine Suche aus.
-. Klicke auf *Gespeicherte Filter* (material:bookmarks[role=darkGrey]).
-. Klicke auf material:bookmark_border[role=darkGrey] *Aktuellen Filter speichern*.
-. Gib einen Namen ein und schalte die optionalen Einstellungen bei Bedarf ein (material:toggle_on[role=skyBlue]).
-. Klicke auf *Speichern*. +
-→ Die Filtereinstellungen erscheinen nun unter *Gespeicherte Filter* (material:bookmarks[role=darkGrey]).
-
-[#use-saved-filters]
-==== Gespeicherte Filter anwenden
-
-. Klicke auf *Gespeicherte Filter* (material:bookmarks[role=darkGrey]).
-. Klicke auf eine bereits erstellte Filtereinstellung. +
-→ Die Suche wird ausgeführt und die verwendeten Sucheinstellungen werden oben als Chips dargestellt.
-
-[#configure-item-table]
-==== Tabelle individualisieren
-
-Die Artikeltabelle kann individuell gestaltet werden. Das bedeutet, dass du selbst entscheiden kannst, welche Informationen dir in den Tabellenspalten angezeigt werden und in welcher Reihenfolge sie platziert sind. Gehe dafür vor wie folgt.
+Die Artikeltabelle kann individuell gestaltet werden. Das bedeutet, dass du selbst entscheiden kannst, welche Informationen dir in den Tabellenspalten angezeigt werden und in welcher Reihenfolge sie platziert sind. Um die Tabelle anzupassen, gehe vor wie folgt.
 
 [.instruction]
 Tabelle individualisieren:
@@ -504,6 +425,91 @@ Diese Spalte ist eine Standardspalte.
 
 |===
 
+--
+
+[#search-items]
+===== Artikel suchen
+
+Anhand der Suche (material:search[]) kannst du die gewünschten Artikel finden und dem Auftrag hinzufügen. Wenn du eine Suche ausführst, werden deine gewählten Sucheinstellungen oben als Chips dargestellt. Diese Sucheinstellungen kannst du speichern, um sie in Zukunft schneller und einfacher wieder verwenden zu können. +
+Verwende eine der folgenden Möglichkeiten, um nach Artikeln zu suchen.
+
+[.instruction]
+Artikel suchen:
+
+.. *_Möglichkeit 1:_* Klicke auf material:search[], um direkt eine Liste aller Artikel zu sehen.
+.. *_Möglichkeit 2:_* Gib etwas in das Suchfeld ein und klicke auf einen der automatischen Vorschläge.
+.. *_Möglichkeit 3:_* Klicke auf material:tune[], um die Suchergebnisse mit Hilfe von Filtern einzugrenzen.
+
+Führe eine <<#search-items, Suche>> (material:search[]) aus, um die passenden Artikel zu finden und dem Auftrag hinzuzufügen. Nutze außerdem die in der folgenden Tabelle aufgeführten Filter, um die Suche weiter einzugrenzen. Beachte, dass deine zuvor vorgenommenen <<carrying-out-standard-settings, Standardeinstellungen>> bei der Suche greifen.
+
+[[table-order-filters]]
+.Filter für Auftragspositionen
+[cols="1,3"]
+|===
+|Filter |Erläuterung
+
+| *Volltext*
+|Gib etwas ein, um eine Volltextsuche zu starten.
+
+| *Artikel-ID*
+|Gib eine ID ein, um nach Artikeln mit dieser ID zu filtern.
+
+| *Artikelname*
+|Gib einen Namen ein, um nach Artikeln mit diesem Namen zu filtern.
+
+| *Variantennummer*
+|Gib eine Variantennummer ein, um nach Artikeln mit dieser Variantennummer zu filtern.
+
+| *Varianten-ID*
+|Gib eine Varianten-ID ein, um nach Artikeln mit dieser Varianten-ID zu filtern.
+
+| *Barcode*
+|Gib einen Barcode ein, um nach Artikeln mit diesem Barcode zu filtern.
+
+| *Hersteller*
+|Gib einen Hersteller ein, um nach Artikeln dieses Herstellers zu filtern.
+
+| *Artikel-Tag*
+|Gib ein Tag ein, um nach Artikeln mit diesem Tag zu filtern.
+
+| *Nur vorrätige Artikel anzeigen*
+|Aktiviere diese Option (material:done[role=skyBlue]), um nach vorrätigen Artikeln zu filtern.
+
+| *Nur aktive Artikel anzeigen*
+|Aktiviere diese Option (material:done[role=skyBlue]), um nach aktiven Artikeln zu filtern.
+
+| *Nur Vertriebslager anzeigen*
+|Aktiviere diese Option (material:done[role=skyBlue]), um nach Artikeln in Vertriebslagern zu filtern. +
+*_Hinweis:_* Wenn du in den Grundeinstellungen die Lagereinstellung *a) pro Auftrag kann ein Lager zugeordnet werden* gewählt hast, steht dir die Option *Nur Vertriebslager anzeigen* nicht zur Verfügung, weil du das Lager bereits bestimmt hast.
+
+| *Nur Artikel mit gültigem Preis anzeigen*
+|Aktiviere diese Option (material:done[role=skyBlue]), um nach Artikeln mit gültigem Preis zu filtern.
+
+|===
+
+[#save-current-filter]
+===== Aktuellen Filter speichern
+
+. Führe eine Suche aus.
+. Klicke auf *Gespeicherte Filter* (material:bookmarks[role=darkGrey]).
+. Klicke auf material:bookmark_border[role=darkGrey] *Aktuellen Filter speichern*.
+. Gib einen Namen ein und schalte die optionalen Einstellungen bei Bedarf ein (material:toggle_on[role=skyBlue]).
+. Klicke auf *Speichern*. +
+→ Die Filtereinstellungen erscheinen nun unter *Gespeicherte Filter* (material:bookmarks[role=darkGrey]).
+
+
+[#use-saved-filters]
+===== Gespeicherte Filter anwenden
+
+. Klicke auf *Gespeicherte Filter* (material:bookmarks[role=darkGrey]).
+. Klicke auf eine bereits erstellte Filtereinstellung. +
+→ Die Suche wird ausgeführt und die verwendeten Sucheinstellungen werden oben als Chips dargestellt.
+
+[#adding-items]
+==== Artikel hinzufügen
+
+Nachdem du mithilfe der Suche oder anhand von Filtern alle gewünschten Artikel gefunden hast, kannst du sie dem Auftrag hinzufügen. Gehe dazu vor wie folgt.
+
 [.instruction]
 Artikel hinzufügen:
 
@@ -512,15 +518,15 @@ Artikel hinzufügen:
 . Gib die Menge des Artikels ein, die dem Auftrag hinzugefügt werden soll. +
 → Nimmst du Preis- oder Mengenänderungen vor, gehe rechts in der jeweiligen Zeile in das Kontextmenü (material:more_vert[]) und aktualisiere den Verkaufspreis mit Klick auf *Verkaufspreise aktualisieren* (material:refresh[]). +
 *_Tipp:_* Links oben in der Tabelle kannst du mit Klick auf *Verkaufspreise aktualisieren* (material:refresh[]) alle Preis- und Mengenänderungen auf einmal aktualisieren.
-. Klicke am Ende der jeweiligne Zeile auf den Warenkorb (material:add_shopping_cart[]), um den Artikel dem Auftrag hinzuzufügen.
+. Klicke am Ende der jeweiligen Zeile auf *Zum Warenkorb hinzufügen* (material:add_shopping_cart[]), um den Artikel zum Warenkorb hinzuzufügen.
 . Wiederhole diese Schritte, um weitere Artikel hinzuzufügen.
 . Wenn alle Artikel hinzugefügt wurden, gehe zum nächsten Schritt, indem du auf *ZUSAMMENFASSUNG* klickst. +
-→ Der Warenkorb wird gespeichert.
+→ Der Warenkorb wird gespeichert und du wirst zum letzten Schritt weitergeleitet.
 
-[#shopping cart]
-==== Warenkorb
+[#shopping-cart]
+==== Warenkorb bearbeiten
 
-In der Tabelle des Warenkorbs kannst du sowohl den *Artikelnamen* als auch die *Menge* und den *Verkaufspreis* anpassen. Sobald du die Angaben der Menge oder des Preises änderst, müssen Aktualisierungen durchgeführt werden. Dies kannst du tun, indem du am jeweiligen Artikel auf *Verkaufspreis aktualisieren* (material:refresh[]) klickst. Oder du nutzt die Schaltfläche *Verkaufspreise aktualisieren* unterhalb des Warenkorbs. Erst nach der Aktualisierung kannst du in den nächsten Schritt der Auftragsanlage weitergehen.
+In der Tabelle des Warenkorbs kannst du sowohl den *Artikelnamen* als auch die *Menge* und den *Verkaufspreis* anpassen. Sobald du die Angaben der Menge oder des Preises änderst, müssen Aktualisierungen durchgeführt werden. Dies kannst du tun, indem du am jeweiligen Artikel auf *Verkaufspreis aktualisieren* (material:refresh[]) klickst. Oder du nutzt die Schaltfläche *Verkaufspreise aktualisieren* unterhalb des Warenkorb. Erst nach der Aktualisierung kannst du in den nächsten Schritt der Auftragsanlage weitergehen.
 
 Folgendes gilt für Verkaufspreise:
 
@@ -530,14 +536,23 @@ Folgendes gilt für Verkaufspreise:
 * Wenn ein Verkaufspreis eingegeben wird, der niedriger ist als der Einkaufspreis, wirst du durch eine Warnung darauf hingewiesen. Allerdings ist es möglich, einen niedrigeren Verkaufspreis zu wählen, wenn es gewünscht wird.
 * Nimm alle Anpassungen an den Artikeln in diesem Schritt vor, denn im dritten und letzten Schritt der Auftragsanlage ist dies nicht mehr möglich. Das Vor- und Zurücknavigieren innerhalb der Schritte der Auftragsanlage bleibt weiterhin möglich.
 
-Auftragspositionen im Warenkorb können auch gelöscht werden. Klicke dafür auf *Löschen* (material:delete[]). Eine weitere Bearbeitungsmöglichkeit der Auftragspositionen im Warenkorb stellen die Eigenschaften dar. Beachte dafür das Kapitel <<#287, Eigenschaften von Auftragspositionen>>.
+Auftragspositionen im Warenkorb können auch gelöscht werden. Klicke dafür auf *Löschen* (material:delete[]). Eine weitere Bearbeitungsmöglichkeit der Auftragspositionen im Warenkorb stellen die Eigenschaften dar. Beachte dafür das Kapitel <<#edit-order-item-properties, Eigenschaften von Auftragspositionen bearbeiten>>.
 
 Nachdem du alle gewünschten Artikel im Warenkorb abschließend bearbeitet hast, klicke auf *ZUSAMMENFASSUNG*, um zum dritten und letzten Schritt zu gelangen. Du kannst auch zu den Auftragsdetails zurückkehren, indem du auf *Auftragsdetails* klickst. Artikel im Warenkorb werden gespeichert, wenn du vor- oder zurückgehst.
 
 [.collapseBox]
 .*Warenkorbtabelle individualisieren*
 --
-Die Warenkorbtabelle lässt sich individuell anpassen. Du kannst wählen, welche Tabellenspalten dir in welcher Reihenfolge angezeigt werden sollen.
+Die Warenkorbtabelle lässt sich individuell anpassen. Du kannst wählen, welche Tabellenspalten dir in welcher Reihenfolge angezeigt werden sollen. Wenn du die Tabelle angepasst hast, wird diese Auswahl gespeichert.
+
+[.instruction]
+Tabelle individualisieren:
+
+. Klicke auf *Spalten konfigurieren* (material:settings[]). +
+→ Das Fenster *Spalten konfigurieren* wird geöffnet.
+. Wähle, welche Spalten angezeigt werden sollen.
+. Verschiebe (material:drag_indicator[]) die Spalten, sodass sie in der Reihenfolge angezeigt werden, in der du sie benötigst.
+. Klicke auf *Bestätigen*, um deine Auswahl zu speichern.
 
 [[table-shopping-cart]]
 .Tabellenspalten Warenkorb
@@ -648,20 +663,9 @@ Diese Spalte ist keine Standardspalte.
 |Ist dieses Feld gewählt, sind die Aktionen zum Bearbeiten (material:edit[]) und Löschen (material:delete[]) des Artikels verfügbar.
 |===
 
-Passe die Tabelle deinen Bedürfnissen und deinem Arbeitsablauf an. Wenn du die Tabelle angepasst hast, wird diese Auswahl gespeichert. Du kannst die Tabelle jederzeit anpassen.
-
-[.instruction]
-Tabelle individualisieren:
-
-. Klicke auf *Spalten konfigurieren* (material:settings[]). +
-→ Das Fenster *Spalten konfigurieren* wird geöffnet.
-. Wähle die Spalten, die angezeigt werden sollen.
-. Verschiebe (material:drag_indicator[]) die Spalten, sodass sie in der Reihenfolge angezeigt werden, in der du sie benötigst.
-. Klicke auf *Bestätigen*, um deine Auswahl zu speichern.
-
 --
 
-[#287]
+[#edit-order-item-properties]
 ==== Eigenschaften an Auftragspositionen bearbeiten
 
 Vom Warenkorb aus kannst du die Eigenschaften der Auftragspositionen eines Auftrags (Bestelleigenschaften) bearbeiten. Die hier vorgenommenen Änderungen gelten nur für die Auftragspositionen dieses Auftrags. Die im System angelegten Eigenschaften werden nicht überschrieben. In der Auftragsanlage stehen dir nur Eigenschaften zur Verfügung, die du bereits im System angelegt hast. +
@@ -670,7 +674,7 @@ Möchtest du Eigenschaften erstellen und bearbeiten oder bist du noch nicht mit 
 Damit eine Eigenschaft an einer Auftragsposition gesetzt werden kann, muss sie in den Eigenschaftseinstellungen im Bereich *Optionen* als *Bestelleigenschaft* definiert werden. Lege unter xref:artikel:eigenschaften.adoc#property-options[Optionen] außerdem mögliche Aufpreise und Besteuerungen fest. Die hier hinterlegten Werte werden in die Auftragsberechnungen mit einbezogen. Ist bereits eine Eigenschaft mit einer Auftragsposition verknüpft, wird diese an der dazugehörigen Auftragsposition angezeigt.
 
 Die Eigenschaften werden in einer zweiten Tabellenzeile direkt unterhalb der dazugehörigen Auftragsposition angezeigt. Hier findest du Angaben zu *Name*, *Wert*, *Aufpreis* und *USt. %* der Eigenschaft. Die *USt. %*, also den hinterlegten Steuersatz, kannst du direkt in der Tabelle bearbeiten, wenn der Eigenschaftstyp dies zulässt. Zudem kannst du die Eigenschaften der Auftragspositionen *löschen* (material:delete[]). Gelöschte Eigenschaften werden dann für diesen Auftrag nicht berücksichtigt. +
-Um die Eigenschaften zu bearbeiten oder weitere bereits bestehende Eigenschaften zu einer Auftragsposition hinzuzufügen, klicke rechts im Kontextmenü (material:more_vert[]) auf *Eigenschaften bearbeiten* (material:edit[]).
+Um die Eigenschaften zu bearbeiten oder weitere bereits bestehende Eigenschaften zu einer Auftragspositionen hinzuzufügen, klicke rechts im Kontextmenü (material:more_vert[]) auf *Eigenschaften bearbeiten* (material:edit[]).
 
 
 Im Bearbeitungsfenster findest du folgende Angaben zu der Eigenschaft einer Auftragsposition:
@@ -708,12 +712,23 @@ In den Auftragsdetails kannst du die *Zahlungsart*, die *Versandkosten*, die *Ve
 Außerdem kannst du einen oder mehrere *Gutscheincodes* eingeben, die mit diesem Auftrag eingelöst werden. Drücke nach Eingabe des Codes auf _Enter_ oder klicke mit der Maus außerhalb des Felds. Es wird sofort überprüft, ob der Gutscheincode einlösbar ist. Einlösbare Gutscheine werden in grün mit dem Wert des Gutscheins wiedergegeben. Ein Tooltip zeigt an, um welche Art von Gutschein es sich handelt. Gutscheine, die nicht einlösbar sind, werden in rot mit der Info *Nicht einlösbar* angezeigt. Du kannst bei Bedarf auch mehrere Codes eingeben. +
 Die Werte der Gutscheine werden mit dem Auftragswert verrechnet. Gutscheine werden nicht als Auftragspositionen im Warenkorb hinzugefügt. Gutscheine können nicht für Angebote eingelöst werden. Dies bedeutet, dass das Eingabefeld *Gutscheincodes* nur in der Auftragserstellung, nicht aber in der Angebotserstellung verfügbar ist.
 
-Unterhalb der Auftragsdetails wird eine Tabelle mit den ausgewählten Artikelpositionen angezeigt. Zusätzlich zu den Angaben in der vorherigen Ansicht werden dir hier weitere Preise und die Umsatzsteuer ausgegeben. Die Steuersätze kannst du anpassen, wenn du dies in den xref:auftraege:auftraege-verwalten.adoc#250[Standardeinstellungen] erlaubt hast.
+Unterhalb der Auftragsdetails wird eine Tabelle mit den ausgewählten Artikelpositionen angezeigt. Zusätzlich zu den Angaben in der vorherigen Ansicht werden dir hier weitere Preise und die Umsatzsteuer ausgegeben. Die Steuersätze kannst du anpassen, wenn du dies in den <<#carrying-out-standard-settings, Standardeinstellungen>> erlaubt hast.
 
 [.collapseBox]
 .*Tabelle individualisieren*
 --
-Die Tabelle im letzten Schritt der Auftragsanlage lässt sich individuell anpassen. Du kannst wählen, welche Tabellenspalten dir in welcher Reihenfolge angezeigt werden sollen. Die folgenden Tabellenspalten sind verfügbar:
+Die Tabelle im letzten Schritt der Auftragsanlage lässt sich individuell anpassen. Du kannst wählen, welche Tabellenspalten dir in welcher Reihenfolge angezeigt werden sollen. Wenn du die Tabelle angepasst hast, wird diese Auswahl gespeichert.
+
+[.instruction]
+Tabelle individualisieren:
+
+. Klicke auf *Spalten konfigurieren* (material:settings[]). +
+→ Das Fenster *Spalten konfigurieren* wird geöffnet.
+. Wähle, welche Spalten angezeigt werden sollen.
+. Verschiebe (material:drag_indicator[]) die Spalten, sodass sie in der Reihenfolge angezeigt werden, in der du sie benötigst.
+. Klicke auf *Bestätigen*, um deine Auswahl zu speichern.
+
+Die Tabelle verfügt über die folgenden Spalten: +
 
 * Ausklappen
 * Menge
@@ -738,17 +753,6 @@ Die Tabelle im letzten Schritt der Auftragsanlage lässt sich individuell anpass
 * Lagerorte
 * Gewinnspanne (netto)
 * Nachbestellungs-ID
-
-Passe die Tabelle deinen Bedürfnissen und deinem Arbeitsablauf an. Wenn du die Tabelle angepasst hast, wird diese Auswahl gespeichert. Du kannst die Tabelle jederzeit anpassen.
-
-[.instruction]
-Tabelle individualisieren:
-
-. Klicke auf *Spalten konfigurieren* (material:settings[]). +
-→ Das Fenster *Spalten konfigurieren* wird geöffnet.
-. Wähle die Spalten, die angezeigt werden sollen.
-. Verschiebe (material:drag_indicator[]) die Spalten, sodass sie in der Reihenfolge angezeigt werden, in der du sie benötigst.
-. Klicke auf *Bestätigen*, um deine Auswahl zu speichern.
 
 --
 
